frontend/test/should_fail/index_exec_node_fromIndexMultipleFromTo_argument_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:double)
{
	{ i:set<Node>=nodesFromIndexMultipleFromTo(fooi, j, 42, food, 0.0, 1.0) }
}
